--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-form": "^7.4.0",
+    "redux-mock-store": "^1.5.3",
     "redux-promise": "^0.6.0"
   },
   "scripts": {
