--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-scroll": "^1.7.10",
     "redux": "^4.0.0",
     "redux-form": "^7.4.0",
     "redux-mock-store": "^1.5.3",
